user-api/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: user-api
spec:
  to:
    kind: Service
    name: user-api
